<resources>
    <string name="app_name">HeadphonesShop</string>
    <string name="yourName">Your Name</string>
    <string name="select_item">select item</string>
    <string name="OrderPrice">Order Price</string>
    <string name="Quantity">Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string-array name="spinner_sony">
        <item>WH-1000XM4</item>
        <item>WH-1000XM3</item>
        <item>WH-1000XM2</item>
        <item>WH-1000XM1</item>
    </string-array>
</resources>